--- a/index.html
+++ b/index.html
@@ -3,31 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lemon&family=Marcellus&family=Mulish:wght@400;600;700;800&family=Poppins:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Movies</title>
 </head>
 <body>
-    header-nav-menu    <header class="header">
-        <a class="header-logo" href="./index.html"><span
-          class="header-logo-m"  >M</span>box</a>
-        <nav class="header-nav>
-        <ul class="heder-nav-menu">
-            <li class="header-nav-menu-item" ><a  class="header-nav-menu-link" href="">Home</a></li>
-            <li class="header-nav-menu-item" ><a  class="header-nav-menu-link" href="">TV Shows</a></li>
-            <li class="header-nav-menu-item" ><a  class="header-nav-menu-link" href="">Movies</a></li>
-            <li class="header-nav-menu-item" ><a  class="header-nav-menu-link" href="">Series</a></li>
-        </ul>
-        </nav>
-            <ul class="header-icon-list">
-            <li class="header-icon-item">
-                <p class="header-icon-text">icon</p>
-            </li>
-            <li class="header-icon-item">
-                <p class="header-icon-text">icon</p>
-            </li>
-            <li class="header-icon-item">
-                <p class="header-icon-text">icon</p>
-            </li>
-        </ul>
+    <header class="header">
+       <a class="header-logo" href="./index.html"><span class="header-logo-m">M</span>box</a>
+      <nav class="header-nav">
+        <ul class="header-nav-menu">
+            <li class="header-nav-menu-item"><a class="header-nav-menu-link" href="">Home</a></li>
+            <li class="header-nav-menu-item"><a class="header-nav-menu-link" href="">TV Shows</a></li>
+            <li class="header-nav-menu-item"><a class="header-nav-menu-link" href="">Movies</a></li>
+            <li class="header-nav-menu-item"><a class="header-nav-menu-link" href="">Series</a></li>
+           </ul>
+      </nav>
+       <ul class="header-icon-list">
+        <li class="header-icon-item">
+            <p class="header-icon-text">icon</p>
+        </li>
+        <li class="header-icon-item">
+            <p class="header-icon-text">icon</p>
+        </li>
+        <li class="header-icon-item">
+            <p class="header-icon-text">icon</p>
+        </li>
+       </ul>
     </header>
     
 </body>
