--- a/index.html
+++ b/index.html
@@ -16,31 +16,44 @@
       href="https://fonts.googleapis.com/css2?family=Lemon&family=Marcellus&family=Mulish:wght@400;600;700;800&family=Poppins:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Movies</title>
 </head>
 <body>
     <header class="header">
-       <a class="header-logo" href="./index.html"><span class="header-logo-m">M</span>box</a>
-      <nav class="header-nav">
-        <ul class="header-nav-menu">
-            <li class="header-nav-menu-item"><a class="header-nav-menu-link" href="">Home</a></li>
-            <li class="header-nav-menu-item"><a class="header-nav-menu-link" href="">TV Shows</a></li>
-            <li class="header-nav-menu-item"><a class="header-nav-menu-link" href="">Movies</a></li>
-            <li class="header-nav-menu-item"><a class="header-nav-menu-link" href="">Series</a></li>
-           </ul>
-      </nav>
-       <ul class="header-icon-list">
-        <li class="header-icon-item">
-            <p class="header-icon-text">icon</p>
-        </li>
-        <li class="header-icon-item">
-            <p class="header-icon-text">icon</p>
-        </li>
-        <li class="header-icon-item">
-            <p class="header-icon-text">icon</p>
-        </li>
-       </ul>
+        <div class="header-container container">
+            <a class="header-logo" href="./index.html"><span class="header-logo-m">M</span><span class="animate__animated animate__swing">box</span></a>
+            <nav class="header-nav">
+              <ul class="header-nav-menu">
+                  <li class="header-nav-menu-item"><a class="header-nav-menu-link carent" href="">Home</a></li>
+                  <li class="header-nav-menu-item"><a class="header-nav-menu-link" href="">TV Shows</a></li>
+                  <li class="header-nav-menu-item"><a class="header-nav-menu-link" href="">Movies</a></li>
+                  <li class="header-nav-menu-item"><a class="header-nav-menu-link" href="">Series</a></li>
+                 </ul>
+            </nav>
+             <ul class="header-icon-list">
+              <li class="header-icon-item">
+                  <svg class="header-icon-text" width="20" height="20">
+                    <use href="./image/symbol-defs.svg#icon-bell"></use>
+                  </svg>
+              </li>
+              <li class="header-icon-item">
+                  <svg class="header-icon-text" width="20" height="20">
+                    <use href="./image/symbol-defs.svg#icon-search"></use>
+                  </svg>
+              </li>
+              <li class="header-icon-item">
+                  <svg class="header-icon-text" width="20" height="20">
+                    <use href="./image/symbol-defs.svg#icon-person"></use>
+                  </svg>
+              </li>
+             </ul>
+        </div>
+      
     </header>
     
 </body>
